<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:background="@drawable/blue_bg" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="36.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe">
            <!-- INPUT -->
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp"
                tools:ignore="LabelFor,RtlSymmetry" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="12.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe">
            <!-- INPUT -->
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/password"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp"
                tools:ignore="LabelFor,RtlSymmetry" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="12.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe">
            <!-- INPUT -->
            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/password"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/first_name"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp"
                tools:ignore="LabelFor,RtlSymmetry" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="12.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_cornwe">
            <!-- INPUT -->
            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/password"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/last_name"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp"
                tools:ignore="LabelFor,RtlSymmetry" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="18.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_fill__rounded_color"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:onClick="goToSelectTeams"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/create_account"
            android:textColor="#ffffff"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>